@@ -67,6 +67,8 @@ AND relabel cells (because the default value is 0, so it is ignored when using n
 }
 \examples{
 require(umx)
+
+# First we'll just build a 1-factor model
 umx_set_optimizer("SLSQP")
 data(demoOneFactor)
 latents  = c("G")
@@ -78,20 +80,22 @@ m1 <- umxRAM("One Factor", data = mxData(cov(demoOneFactor), type = "cov", numOb
 	umxPath(var = latents, fixedAt = 1)
 )
 
+# 1. Drop the path to x1 (also updating the name so it's
+#    self-explanatory, and get a fit comparison
 m2 = umxModify(m1, update = "G_to_x1", name = "drop_X1", comparison = TRUE)
+# 2. Add the path back (setting free = TRUE)
+m2 = umxModify(m1, update = "G_to_x1", free= TRUE, name = "addback_X1", comparison = TRUE)
+# 3. Fix a value at a non-zero value
+m3 = umxModify(m1, update = "G_to_x1", value = .35, name = "fix_G_x1_at_35", comp = TRUE)
+# You can add objects to models. For instance this would add a path (overwriting the existing one)
+# (thanks Johannes!)
+m3 = umxModify(m1, umxPath("G", with = "x1"), name= "addedPath")
 
 # Use regular expression to drop multiple paths: e.g. G to x3, x4, x5
 m2 = umxModify(m1, regex = "^G_to_x[3-5]", name = "no_G_to_x3_5", comp = TRUE)
 
 # Same, but don't autoRun
 m2 = umxModify(m1, regex  = "^G_to_x[3-5]", name = "no_G_to_x3_5", autoRun = FALSE) 
-
-# Fix a value at a non-zero value
-m2 = umxModify(m1, update = "G_to_x1", value = .35, name = "fix_G_x1_at_35", comp = TRUE)
-
-# Free a fixed value
-m3 = umxModify(m2, update = "G_to_x1", free = TRUE, name = "free_G_x1_again", comparison = TRUE)
-umxCompare(m1,m3)
 
 # Re-write a label
 newLabel = "A_rose_by_any_other_name"
